--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm ci --force --include=dev && npm run build"
+  command = "npm ci && npm run build"
 
 [[redirects]]
   from = "/*"
@@ -9,7 +9,6 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--force"
   NPM_CONFIG_CACHE = "/tmp/.npm"
 
 [context.production.environment]
