--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "postbuild": "echo 'Build completed successfully'",
-    "type-check": "tsc --noEmit --skipLibCheck",
+    "type-check": "npx tsc --noEmit --skipLibCheck",
     "build:prod": "vite build"
   },
   "dependencies": {
@@ -18,13 +18,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/node": "^24.0.10",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
