--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm ci && npm run build"
+  command = "npm ci && npm run build:prod"
 
 [[redirects]]
   from = "/*"
@@ -10,9 +10,11 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_CONFIG_CACHE = "/tmp/.npm"
+  NODE_ENV = "production"
 
 [context.production.environment]
   NODE_ENV = "production"
+  GENERATE_SOURCEMAP = "false"
 
 [[headers]]
   for = "/assets/*"
@@ -28,3 +30,12 @@
   for = "/*.css"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
