--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm ci && npm run build:prod"
+  command = "NODE_ENV=development npm ci && npm run build:prod"
 
 [[redirects]]
   from = "/*"
