--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "lucide-react": "^0.344.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "vite": "^5.4.2",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "vite": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
