--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,9 @@
   NODE_VERSION = "18"
   NPM_CONFIG_CACHE = "/tmp/.npm"
   NODE_ENV = "production"
+  NPM_CONFIG_FETCH_RETRY_MINTIMEOUT = "2000"
+  NPM_CONFIG_FETCH_RETRY_MAXTIMEOUT = "120000"
+  NPM_CONFIG_FETCH_RETRY_ATTEMPTS = "5"
 
 [context.production.environment]
   NODE_ENV = "production"
