--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.9.8",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
