--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.0.10",
     "@types/papaparse": "^5.3.16",
     "@vitejs/plugin-react": "^4.3.1",
