--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "NODE_ENV=development npm ci && npm run build:prod"
+  command = "npm ci && npm run build:prod"
 
 [[redirects]]
   from = "/*"
@@ -10,7 +10,6 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_CONFIG_CACHE = "/tmp/.npm"
-  NODE_ENV = "production"
   NPM_CONFIG_FETCH_RETRY_MINTIMEOUT = "2000"
   NPM_CONFIG_FETCH_RETRY_MAXTIMEOUT = "120000"
   NPM_CONFIG_FETCH_RETRY_ATTEMPTS = "5"
@@ -18,6 +17,10 @@
 [context.production.environment]
   NODE_ENV = "production"
   GENERATE_SOURCEMAP = "false"
+
+# Environment variables will be set in Netlify dashboard
+# VITE_SUPABASE_URL = "your-supabase-url"
+# VITE_SUPABASE_ANON_KEY = "your-supabase-anon-key"
 
 [[headers]]
   for = "/assets/*"
