--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,7 @@
 [build.environment]
   NODE_VERSION = "20"
   NPM_CONFIG_CACHE = "/tmp/.npm"
+  NODE_MODULES_CACHE = false
   NPM_CONFIG_FETCH_RETRY_MINTIMEOUT = "2000"
   NPM_CONFIG_FETCH_RETRY_MAXTIMEOUT = "120000"
   NPM_CONFIG_FETCH_RETRY_ATTEMPTS = "5"
